# EDD_EX_001

./: CMakeLists.txt  Listacircular2.c  Poker.c  README.md  cola.h  contar_vocales.h  func_mayor_menor.c  listaCircular.c  lista_menor_mayor.h  listac_ex01_main_function  listac_ex01_main_function.c  listacircular.h  loader_data.py  main.c  main_function  main_function.c  main_function_ejercicio001  main_function_ejercicio001.c  main_function_ejercicio002  main_function_ejercicio002.c  menor_a_mayor.c  obtener_promedio.h  poker_ex02_main_function  poker_ex02_main_function.c  porcentaje_vocales.c  procesar_funcion.h  procesos.c  procesos.txt  procesos_2.txt  procesos_ex03_main_function  procesos_ex03_main_function.c  promedio.c  promedio_valores.c  selector_muestra.c  selector_muestra.h  tipojugadas.h
listac_funciones/: contar_vocales.h  lista_menor_mayor.h  listacircular.h  obtener_promedio.h  selector_muestra.h
poker_funciones/: calcular_puntaje.h  jugar_ronda.h  pilas.h  tipojugadas.h
