cmake_minimum_required(VERSION 3.10)
project(untitled1)

set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(main_function.c
        contar_vocales.h
        contar_vocales.h
        obtener_promedio.h
        obtener_promedio.h
        selector_muestra.h
        selector_muestra.h
        lista_menor_mayor.h)